--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,15 +1,94 @@
 @article{DBLP:journals/dcg/Biedl11,
-  author    = {Therese C. Biedl},
-  title     = {Small Drawings of Outerplanar Graphs, Series-Parallel Graphs, and
-               Other Planar Graphs},
-  journal   = {Discret. Comput. Geom.},
-  volume    = {45},
-  number    = {1},
-  pages     = {141--160},
-  year      = {2011},
-  url       = {https://doi.org/10.1007/s00454-010-9310-z},
-  doi       = {10.1007/s00454-010-9310-z},
-  timestamp = {Thu, 12 Mar 2020 17:21:23 +0100},
-  biburl    = {https://dblp.org/rec/journals/dcg/Biedl11.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
+	author    = {Therese C. Biedl},
+	title     = {Small Drawings of Outerplanar Graphs, Series-Parallel Graphs, and
+	Other Planar Graphs},
+	journal   = {Discret. Comput. Geom.},
+	volume    = {45},
+	number    = {1},
+	pages     = {141--160},
+	year      = {2011},
+	url       = {https://doi.org/10.1007/s00454-010-9310-z},
+	doi       = {10.1007/s00454-010-9310-z},
+	timestamp = {Thu, 12 Mar 2020 17:21:23 +0100},
+	biburl    = {https://dblp.org/rec/journals/dcg/Biedl11.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@online{GDContest,
+	author = {29th International Symposium on Graph Drawing and Network Visualization},
+	title = {Planar polyline edge-length ratio on a fixed grid},
+	year = 2021,
+	url = {http://mozart.diei.unipg.it/gdcontest/contest2021/index.php?id=live-challenge},
+	urldate = {10. August 2021}
+}
+
+@article{DBLP:journals/corr/abs-2108-12628,
+	author    = {Carlos Alegria and
+	Manuel Borrazzo and
+	Giordano Da Lozzo and
+	Giuseppe Di Battista and
+	Fabrizio Frati and
+	Maurizio Patrignani},
+	title     = {Planar Straight-line Realizations of 2-Trees with Prescribed Edge
+	Lengths},
+	journal   = {CoRR},
+	volume    = {abs/2108.12628},
+	year      = {2021},
+	url       = {https://arxiv.org/abs/2108.12628},
+	archivePrefix = {arXiv},
+	eprint    = {2108.12628},
+	timestamp = {Thu, 02 Sep 2021 14:42:29 +0200},
+	biburl    = {https://dblp.org/rec/journals/corr/abs-2108-12628.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/jgaa/MondalNRA11,
+	author    = {Debajyoti Mondal and
+	Rahnuma Islam Nishat and
+	Md. Saidur Rahman and
+	Muhammad Jawaherul Alam},
+	title     = {Minimum-Area Drawings of Plane 3-Trees},
+	journal   = {J. Graph Algorithms Appl.},
+	volume    = {15},
+	number    = {2},
+	pages     = {177--204},
+	year      = {2011},
+	url       = {https://doi.org/10.7155/jgaa.00222},
+	doi       = {10.7155/jgaa.00222},
+	timestamp = {Tue, 16 Feb 2021 15:56:59 +0100},
+	biburl    = {https://dblp.org/rec/journals/jgaa/MondalNRA11.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@book{DBLP:books/daglib/0023376,
+	author    = {Thomas H. Cormen and
+	Charles E. Leiserson and
+	Ronald L. Rivest and
+	Clifford Stein},
+	title     = {Introduction to Algorithms, 3rd Edition},
+	publisher = {{MIT} Press},
+	year      = {2009},
+	url       = {http://mitpress.mit.edu/books/introduction-algorithms},
+	isbn      = {978-0-262-03384-8},
+	timestamp = {Mon, 17 Aug 2020 11:36:12 +0200},
+	biburl    = {https://dblp.org/rec/books/daglib/0023376.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@online{Schnyder,
+	author = {ICS},
+	title = {Walter Schnyder's Grid-Embedding Algorithm},
+	year = 2021,
+	url = {https://www.ics.uci.edu/~eppstein/gina/schnyder/},
+	urldate = {10. August 2021}
+}
+
+@online{Centroid,
+	author = {SureSolv},
+	title = {How three medians meeting at centroid divides triangle area into 3 and 6 equal parts},
+	year = 2021,
+	url = {https://suresolv.com/basic-maths/basic-and-rich-geometry-concepts-part-6-proof-triangle-area-medians},
+	urldate = {10. August 2021}
+}
+
+
