--- a/intro.tex
+++ b/intro.tex
@@ -1,2 +1,8 @@
 \section{Introduction}
-The topic of visualization of information relationships occur in various areas of work. Examples of the fields include circuit design, architecture, web science, social sciences, biology, geography, information security and software engineering. The relationships of various information is formalized \textcolor{red}{What is an undirected planar graph, what are bends, grid, poly-line, edge-length}
+The topic of visualization of information relationships occur in various areas of work. Examples of the fields include circuit design, architecture, web science, social sciences, biology, geography, information security and software engineering. Over the last decades, many different efficient algorithms were developed for graph drawings in the Euclidean plane.\\
+Among others, one classic question is to test whether a given network can be visualized with straight lines and prescribed edge lengths. This study is also related to several other topics like rigidity theory, structural analysis of molecules and sensor networks [\cite{DBLP:journals/corr/abs-2108-12628}, Page 1].
+For over 25 years, an international symposium of Graph Drawing and Network Visualization takes place annually. $28^{\text{th}}$ International Symposium of Graph Drawing and Network Visualization will be held from September $15^{\text{th}}$ to $17^{\text{th}}$ in Tübingen. 
+\newline Part of the symposium is a traditional Graph Drawing Contest. The contest consists of two parts - the \textit{Creative Topics} and the \textit{Live Challenge}. The main focus for the Creative Topics lies on the creation of drawings of two given graphs. Aspects to consider for the visualization are clarity, aesthetic appeal and readability.
+\newline On the other hand, the Live Challenge is held similar to a programming contest. Participants, usually teams, will get a theme and a set of graphs and will have one hour of processing. The results will be ranked and the team with the highest score wins the competition. The teams will be allowed to use any combination of software and human interaction systems in order to produce the best results. Usually, the challenge is derived from a theoretical optimization problem.\bigskip\\
+On the occasion of the Graph Drawing contest held this year in Tübingen, this report covers the topic of drawing various graph classes with connections of approximately equal length.
+
